--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,7 @@ variables:
   containerRegistry: 'definitelynotusedregistry.azurecr.io'
   dockerfilePath: '$(Build.SourcesDirectory)/Dockerfile'
   tag: '$(Build.BuildId)'
-
+  poolName: 'test task pool'
   # Agent VM image name
   vmImageName: 'ubuntu-latest'
 
@@ -26,7 +26,7 @@ stages:
   - job: Build
     displayName: Build
     pool:
-      vmImage: $(vmImageName)
+      name: $(poolName)
     steps:
     - task: Docker@2
       displayName: Build and push an image to container registry
