--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -6,6 +6,7 @@
 schedules:
   - cron: 0 14 * * *
     displayName: send csv file everyday on 14:00
+    branches: master
 
 pool:
   poolName: test task pool
