Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -17,6 +17,9 @@ pool:
   name: 'test task pool'
 
 steps:
+- script: echo$(JSON_OUTPUT_FILE)
+  displayName: just testing
+  
 - script: ./scripts/get_variable_groups_in_releases.sh
   displayName: 'get release data into json file'
 
