Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -24,8 +24,8 @@ steps:
 - script: ./scripts/get_variable_groups.sh
   displayName: 'get all variable groups'
 
-- script: python /scripts/json_to_csv.py
+- script: python ./scripts/json_to_csv.py
   displayName: 'convert json data to csv'
 
-- script: python /scripts/send_csv_to_slack.py
+- script: python ./scripts/send_csv_to_slack.py
   displayName: 'send file to slack'
